// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool discovery snapshot > full tool catalog ID set is locked (sorted) > full-catalog-tool-ids 1`] = `
[
  "account_status",
  "account_upgrade",
  "account_usage_report",
  "approve_agent_work",
  "approve_decision",
  "batch_action",
  "batch_create_entities",
  "batch_delete_entities",
  "check_execution_readiness",
  "check_spawn_guard",
  "classify_task_model",
  "comment_on_entity",
  "complete_plan",
  "configure_org",
  "configure_outcome_type",
  "consolidate_pr",
  "create_decision",
  "create_entity",
  "create_milestone",
  "create_task",
  "delegate_agent_task",
  "entity_action",
  "get_active_sessions",
  "get_agent_status",
  "get_decision_history",
  "get_initiative_pulse",
  "get_initiative_stream_state",
  "get_morning_brief",
  "get_my_trust_context",
  "get_operator_chronicle",
  "get_org_snapshot",
  "get_outcome_attribution",
  "get_pending_decisions",
  "get_relevant_learnings",
  "get_scoring_signals",
  "get_task_with_context",
  "handoff_task",
  "improve_plan",
  "list_entities",
  "list_entity_comments",
  "manage_lifecycle",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_apply_changeset",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_describe_action",
  "orgx_describe_tool",
  "orgx_emit_activity",
  "orgx_emit_execution_graph",
  "orgx_free_audit",
  "orgx_inspect",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_write",
  "pin_workstream",
  "query_org_memory",
  "queue_action",
  "recall_memory",
  "recommend_next_action",
  "record_outcome",
  "record_plan_edit",
  "record_quality_score",
  "reject_decision",
  "remember_decision",
  "resume_agent_run",
  "resume_plan_session",
  "review_artifact",
  "save_artifact",
  "scaffold_initiative",
  "score_next_up_queue",
  "scoring_config",
  "spawn_agent_task",
  "start_autonomous_session",
  "start_plan_session",
  "stats",
  "submit_learning",
  "sync_client_state",
  "track_project_progress",
  "update_entity",
  "update_stream_progress",
  "validate_studio_content",
  "verify_entity_completion",
  "workspace",
]
`;

exports[`tool discovery snapshot > full tool catalog description hashes are locked > full-catalog-description-hashes 1`] = `
{
  "account_status": "e3b0c44298fc",
  "account_upgrade": "e3b0c44298fc",
  "account_usage_report": "e3b0c44298fc",
  "approve_agent_work": "69c921e84026",
  "approve_decision": "2d014b089278",
  "batch_action": "e3b0c44298fc",
  "batch_create_entities": "e3b0c44298fc",
  "batch_delete_entities": "e3b0c44298fc",
  "check_execution_readiness": "5bc6f341d5e9",
  "check_spawn_guard": "ee461e467241",
  "classify_task_model": "c67e1a32d73f",
  "comment_on_entity": "e3b0c44298fc",
  "complete_plan": "330451feab64",
  "configure_org": "b73f7e934044",
  "configure_outcome_type": "241babd40d8b",
  "consolidate_pr": "30c578af29e7",
  "create_decision": "dffe21ec4886",
  "create_entity": "e3b0c44298fc",
  "create_milestone": "305beff7de57",
  "create_task": "b87439f36591",
  "delegate_agent_task": "b53d880c4730",
  "entity_action": "e3b0c44298fc",
  "get_active_sessions": "5b6d3068a1e3",
  "get_agent_status": "71b6d4271553",
  "get_decision_history": "20f4f6a2006f",
  "get_initiative_pulse": "70f64225b9ed",
  "get_initiative_stream_state": "e475687922d2",
  "get_morning_brief": "d1b43d962ab6",
  "get_my_trust_context": "b1465a1be8f1",
  "get_operator_chronicle": "64cbbe4ee56f",
  "get_org_snapshot": "e3b0c44298fc",
  "get_outcome_attribution": "a26ff7f37782",
  "get_pending_decisions": "d36f50e1bd2f",
  "get_relevant_learnings": "d80620b33e53",
  "get_scoring_signals": "f72acd307b0f",
  "get_task_with_context": "e3b0c44298fc",
  "handoff_task": "6e727325f5f1",
  "improve_plan": "eb43c66769b5",
  "list_entities": "e3b0c44298fc",
  "list_entity_comments": "e3b0c44298fc",
  "manage_lifecycle": "06c4228da928",
  "orgx_ack_attention": "bd1b99bec107",
  "orgx_act": "1acc52d745b9",
  "orgx_apply_changeset": "2e03a4773519",
  "orgx_attach": "fa97567f0cb7",
  "orgx_bootstrap": "ade80b9b758c",
  "orgx_decide": "4338f82eee29",
  "orgx_describe_action": "9ee22a3df82d",
  "orgx_describe_tool": "ca80b55167b8",
  "orgx_emit_activity": "953acc905ecd",
  "orgx_emit_execution_graph": "8347e352d2fc",
  "orgx_free_audit": "8ac858a2b706",
  "orgx_inspect": "8b297e2f1d82",
  "orgx_plan": "2f745e22160a",
  "orgx_poll_attention": "778df6f9ab53",
  "orgx_poll_question": "aa8c88d3a5ac",
  "orgx_recommend": "8235781a13e1",
  "orgx_request_attention": "c7ff1662665f",
  "orgx_request_question": "0edde8da30eb",
  "orgx_search": "99af7aa1e3aa",
  "orgx_spawn": "96112624c97e",
  "orgx_submit_receipt": "95ed2efba439",
  "orgx_write": "5e57720e13db",
  "pin_workstream": "3a134a5ae349",
  "query_org_memory": "fd52f2ef6778",
  "queue_action": "a469db460ac6",
  "recall_memory": "33df87f18d8b",
  "recommend_next_action": "4d31724cc164",
  "record_outcome": "b7be34aaa1fb",
  "record_plan_edit": "68ff5a8bb1e0",
  "record_quality_score": "3de8dc2db6c8",
  "reject_decision": "5c9a5ed66bc8",
  "remember_decision": "fd4ebc6d5afa",
  "resume_agent_run": "e3b0c44298fc",
  "resume_plan_session": "608a4ddb482a",
  "review_artifact": "e3b0c44298fc",
  "save_artifact": "e3b0c44298fc",
  "scaffold_initiative": "e3b0c44298fc",
  "score_next_up_queue": "1fb0387faad9",
  "scoring_config": "70f43e1a6bef",
  "spawn_agent_task": "0aa872e31268",
  "start_autonomous_session": "dc0ffa885265",
  "start_plan_session": "ce3624dbf183",
  "stats": "09bf08a53ca0",
  "submit_learning": "9e23d799309e",
  "sync_client_state": "835db6dc15fd",
  "track_project_progress": "f15e5905e53b",
  "update_entity": "e3b0c44298fc",
  "update_stream_progress": "025072c4c86e",
  "validate_studio_content": "3958cd2b6f59",
  "verify_entity_completion": "e3b0c44298fc",
  "workspace": "fd799a38f5bb",
}
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "chatgpt" exposes a locked tool set > profile-chatgpt-tool-ids 1`] = `
[
  "approve_agent_work",
  "approve_decision",
  "check_execution_readiness",
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "handoff_task",
  "manage_lifecycle",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_inspect",
  "orgx_plan",
  "orgx_recommend",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_write",
  "reject_decision",
  "review_artifact",
  "scaffold_initiative",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "claude-directory" exposes a locked tool set > profile-claude-directory-tool-ids 1`] = `
[
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "orgx_inspect",
  "orgx_recommend",
  "orgx_search",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "commander" exposes a locked tool set > profile-commander-tool-ids 1`] = `
[
  "check_execution_readiness",
  "consolidate_pr",
  "get_operator_chronicle",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_emit_execution_graph",
  "orgx_inspect",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_write",
  "scaffold_initiative",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "executor" exposes a locked tool set > profile-executor-tool-ids 1`] = `
[
  "check_execution_readiness",
  "consolidate_pr",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_emit_activity",
  "orgx_emit_execution_graph",
  "orgx_inspect",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_write",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "memory" exposes a locked tool set > profile-memory-tool-ids 1`] = `
[
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_inspect",
  "orgx_recommend",
  "orgx_search",
  "orgx_submit_receipt",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "observer" exposes a locked tool set > profile-observer-tool-ids 1`] = `
[
  "get_operator_chronicle",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_inspect",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_search",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "planner" exposes a locked tool set > profile-planner-tool-ids 1`] = `
[
  "orgx_act",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_inspect",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_write",
  "scaffold_initiative",
]
`;

exports[`tool discovery snapshot > per-profile snapshots > profile "v2" exposes a locked tool set > profile-v2-tool-ids 1`] = `
[
  "approve_agent_work",
  "approve_decision",
  "check_execution_readiness",
  "consolidate_pr",
  "delegate_agent_task",
  "get_agent_status",
  "get_initiative_pulse",
  "get_morning_brief",
  "get_operator_chronicle",
  "handoff_task",
  "manage_lifecycle",
  "orgx_ack_attention",
  "orgx_act",
  "orgx_attach",
  "orgx_bootstrap",
  "orgx_decide",
  "orgx_emit_activity",
  "orgx_emit_execution_graph",
  "orgx_inspect",
  "orgx_plan",
  "orgx_poll_attention",
  "orgx_poll_question",
  "orgx_recommend",
  "orgx_request_attention",
  "orgx_request_question",
  "orgx_search",
  "orgx_spawn",
  "orgx_submit_receipt",
  "orgx_write",
  "query_org_memory",
  "recall_memory",
  "recommend_next_action",
  "reject_decision",
  "review_artifact",
  "scaffold_initiative",
  "spawn_agent_task",
  "track_project_progress",
]
`;
